[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/single_box_display.gd" type="Script" id=1]
[ext_resource path="res://textures/circle_filled.png" type="Texture" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 blend_color: hint_color;

void fragment() {
	COLOR = texture(TEXTURE, UV) * blend_color;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/blend_color = Color( 1, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/blend_color = Color( 1, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/blend_color = Color( 1, 0, 0, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -896.0
margin_bottom = -554.0
rect_min_size = Vector2( 128, 46 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.12549 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.2, 0.2 )
custom_constants/margin_top = 25
custom_constants/margin_left = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 30.0
margin_top = 25.0
margin_right = 610.0
margin_bottom = 205.0
custom_constants/separation = 20

[node name="RecipeColor" type="TextureRect" parent="MarginContainer/HBoxContainer"]
material = SubResource( 2 )
margin_right = 180.0
margin_bottom = 180.0
texture = ExtResource( 2 )

[node name="RecipeColor2" type="TextureRect" parent="MarginContainer/HBoxContainer"]
material = SubResource( 3 )
margin_left = 200.0
margin_right = 380.0
margin_bottom = 180.0
texture = ExtResource( 2 )

[node name="RecipeColor3" type="TextureRect" parent="MarginContainer/HBoxContainer"]
material = SubResource( 4 )
margin_left = 400.0
margin_right = 580.0
margin_bottom = 180.0
texture = ExtResource( 2 )
